--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": [
     "config:base"
   ],
+  "automerge": true,
   "lockFileMaintenance": {
     "enabled": true,
     "automerge": true
